[workspace]
members = [
    "pact_*"
]
resolver = "2"

[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
pact_models = { version="~1.2.0", git = "https://github.com/you54f/pact-reference", branch="fix/logging_align_tracing_libs", default-features = false }
